--- a/agia-jetty/pom.xml
+++ b/agia-jetty/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <artifactId>agia-parent</artifactId>
     <groupId>fr.acxio.tools</groupId>
-    <version>2.0.3</version>
+    <version>2.0.4-SNAPSHOT</version>
     <relativePath>..</relativePath>
   </parent>
   <artifactId>agia-jetty</artifactId>
