--- a/agia-tasks/pom.xml
+++ b/agia-tasks/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <artifactId>agia-parent</artifactId>
     <groupId>fr.acxio.tools</groupId>
-    <version>2.0.3</version>
+    <version>2.0.4-SNAPSHOT</version>
     <relativePath>..</relativePath>
   </parent>
   
@@ -575,7 +575,7 @@
 				<plugin>
 			        <groupId>org.codehaus.mojo</groupId>
 			        <artifactId>sonar-maven-plugin</artifactId>
-			        <version>2.0</version>
+			        <version>2.3.1</version>
 			      </plugin>
 			</plugins>
 		</pluginManagement>
