--- a/agia-tasks/pom.xml
+++ b/agia-tasks/pom.xml
@@ -437,6 +437,11 @@
 			<artifactId>cxf-rt-frontend-jaxws</artifactId>
 			<version>2.7.10</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-compress</artifactId>
+			<version>1.8.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
